<resources>
    <string name="app_name">kotlin_app_step2</string>
    <string name="textview">TextView</string>
    <string name="mostrar_toast">Mostrar Toast</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="mandar_datos_a_la_siguiente_actividad">Mandar Datos a la Siguiente Actividad</string>
    <string name="compartir">Compartir</string>
    <string name="demo_recycler_view">Demo Recycler View</string>
</resources>